--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">KittinutMenu</string>
+    <string name="app_name">Juthakarn Menu</string>
     <string name="open_drawer">Open</string>
     <string name="close_drawer">Close</string>
 </resources>
